INCLUDE_DIRECTORIES(${PyBeast_SOURCE_DIR}/include) 

# boost section
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
#SET(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost COMPONENTS
				python
			 REQUIRED)

MESSAGE("Include dirs of boost: " ${Boost_INCLUDE_DIRS} )
MESSAGE("Libs of boost: " ${Boost_LIBRARIES} )

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})


ADD_DEFINITIONS(-DBOOST_PYTHON_STATIC_LIB)

# python section
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
LINK_DIRECTORIES(${PYTHON_LIBRARIES})
	
# beast section
FIND_PACKAGE(Beast REQUIRED)
INCLUDE_DIRECTORIES(${BEAST_INCLUDE_DIR})
LINK_DIRECTORIES(${BEAST_LIBRARY})

#FIXME
INCLUDE_DIRECTORIES($ENV{BEAST_COMMON})

FILE(GLOB py_beast_cpp "*.cpp")
ADD_LIBRARY (PyBeast SHARED ${py_beast_cpp})
SET_TARGET_PROPERTIES( PyBeast PROPERTIES IMPORT_SUFFIX ".pyd"  IMPORT_PREFIXE "" PREFIX "" )

TARGET_LINK_LIBRARIES(PyBeast ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${BEAST_LIBRARY})
